sampling: box-muller, rejection-sampling

--- a/ml/sampling-methods/box-muller-method.ipynb
+++ b/ml/sampling-methods/box-muller-method.ipynb
@@ -44,7 +44,7 @@
     "    plt.plot(sorted(z_ran), label='ordinary-random')\n",
     "    plt.legend(loc='upper left')\n",
     "    plt.show()\n",
-    "interactive(check_random_stats,power_of_ten=(1,10))"
+    "interact(check_random_stats,power_of_ten=(1,10))"
    ]
   },
   {
@@ -68,7 +68,7 @@
     "pts_inside1 = sum([1 for zz1 in z1_s for zz2 in z2_s if (zz1+zz2)<=1 ])\n",
     "\n",
     "print(\"#total pts: \", len(z1)*len(z2))\n",
-    "print(\"#pts inside:: \", pts_inside, pts_inside1, pts_inside2)\n",
+    "print(\"#pts inside:: \", pts_inside1)\n",
     "print(\" prob: \", pts_inside1/(len(z1)*len(z2)))\n",
     "print(\"1/pi\", 1./math.pi, \" pi/4: \", math.pi/4.)"
    ]
@@ -87,6 +87,34 @@
     "print(\"pts_inside: \", pts_inside, \" total: \", pts_total)\n",
     "print(\"prob: \", pts_inside/float(pts_total))\n",
     "print(\"expected (pi/4): \", math.pi/4.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## reasoning\n",
+    "\n",
+    "* $z_1, z_2 \\in U(-1, 1)$\n",
+    "* Discard and resample if $z_1^2 + z_2^2 > 1$\n",
+    "* This leads to a uniform distribution of points inside an unit circle with\n",
+    "$\\displaystyle p(z_1, z_2) = \\frac{\\pi}{4}$\n",
+    "* For each pair, do\n",
+    "  * let $\\displaystyle r^2 = z_1^2 + z_2^2 $\n",
+    "  * $\\displaystyle  y_1 = z_1 \\left( \\frac{-2 \\ln z_1}{r^2} \\right)$\n",
+    "  * $\\displaystyle  y_2 = z_2 \\left( \\frac{-2 \\ln z_2}{r^2} \\right)$\n",
+    "  * Now the joint distribution of $y_1, y_2$ is\n",
+    "\\begin{array}{rl}\n",
+    "p(y_1, y_2) &= \n",
+    "\\displaystyle  p(z_1, z_2) \\left| \\frac{\\partial(z_1,z_2)}{\\partial(y_1,y_2)} \\right|\n",
+    "\\\\ &= \n",
+    "\\displaystyle \\left[ \\frac{1}{\\sqrt{2\\pi}} \\exp(-2y_1^2 ~/~ 2) \\right]\n",
+    "\\displaystyle \\left[ \\frac{1}{\\sqrt{2\\pi}} \\exp(-2y_2^2 ~/~ 2) \\right]\n",
+    "\\end{array}\n",
+    "\n",
+    "Not sure about how the leap to the last step was achieved.   \n",
+    "May be this might help  \n",
+    "[G. E. P. Box and Mervin E. Muller, A Note on the Generation of Random Normal Deviates, The Annals of Mathematical Statistics (1958), Vol. 29, No. 2 pp. 610–611](http://projecteuclid.org/DPubS/Repository/1.0/Disseminateview=body&id=pdf_1&handle=euclid.aoms/1177706645)"
    ]
   },
   {
@@ -112,7 +140,7 @@
   "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
-   "language": "python",
+   "language": "python3",
    "name": "python3"
   },
   "language_info": {
@@ -132,8 +160,28 @@
    "current_citInitial": 1,
    "eqLabelWithNumbers": true,
    "eqNumInitial": 0
+  },
+  "toc": {
+   "colors": {
+    "hover_highlight": "#DAA520",
+    "running_highlight": "#FF0000",
+    "selected_highlight": "#FFD700"
+   },
+   "moveMenuLeft": true,
+   "nav_menu": {
+    "height": "12px",
+    "width": "252px"
+   },
+   "navigate_menu": true,
+   "number_sections": true,
+   "sideBar": true,
+   "threshold": 4,
+   "toc_cell": false,
+   "toc_section_display": "block",
+   "toc_window_display": false,
+   "widenNotebook": false
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
