--- a/ml/sampling-methods/rejection-sampling.ipynb
+++ b/ml/sampling-methods/rejection-sampling.ipynb
@@ -62,9 +62,9 @@
     "\\begin{array}{llr}\n",
     "p(\\text{accept})\n",
     "&=\n",
-    "\\int \\left\\{ \\frac{\\tilde{p}(z)}{kq(z)} \\right\\} q(z) dz\n",
+    "\\displaystyle \\int \\left\\{ \\frac{\\tilde{p}(z)}{kq(z)} \\right\\} q(z) dz\n",
     "\\\\ &=\n",
-    "\\frac{1}{k} \\int \\tilde{p}(z) dz \n",
+    "\\displaystyle \\frac{1}{k} \\int \\tilde{p}(z) dz \n",
     "\\end{array}"
    ]
   },
@@ -85,7 +85,9 @@
   },
   {
    "cell_type": "code",
-   "metadata": {},
+   "metadata": {
+    "code_folding": []
+   },
    "outputs": [],
    "source": [
     "def compute_gamma(z, a, b):\n",
@@ -236,6 +238,105 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "q(z) = \\frac{k}{1 + (z-c)^2/b^2}\n",
+    "$$\n",
+    "\n",
+    "The minimum reject rate is obtained by setting $c = a − 1, b^2 = 2a − 1$ and choosing the constant k to be as small as possible while still satisfying the requirement $kq(z) \\ge \\tilde{p}(z)$  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "p(x ; x_0, \\gamma)\n",
+    "=\n",
+    "\\left(\n",
+    "   \\pi \\gamma\n",
+    "   \\left[\n",
+    "     1+\n",
+    "      \\left(\n",
+    "        \\frac{x-x_0}{\\gamma}\n",
+    "      \\right)^2\n",
+    "    \\right]\n",
+    "\\right)^{-1}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\text{Gam}(z \\mid a,b)\n",
+    "=\n",
+    "\\frac{b^a ~z^{a-1}\\exp(-bz)}{\\Gamma(a)}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_cauchy(z, z_0, gamma):\n",
+    "    term1 = math.pi * gamma\n",
+    "    term2 = 1 + ((z-z_0)/gamma)**2\n",
+    "    return 1./(term1 * term2)\n",
+    "def compute_q(z, k, b_sqrd, c):\n",
+    "    den = 1. + (z-c)**2/b_sqrd\n",
+    "    return k / den\n",
+    "def compute_gamma(z, a, b, normalize=True):\n",
+    "    return (b**a) * (z**(a-1)) * (math.e**(-b*z)) / math.gamma(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.linspace(0, 30, 100)\n",
+    "a,b = 10, 1\n",
+    "k_low, k = 0., 1.\n",
+    "y_gamma = np.array([compute_gamma(xx, a, b) for xx in x])\n",
+    "y_cauchy = np.array([compute_cauchy(xx, a-1, math.sqrt(2*a-1)) for xx in x])\n",
+    "y_cauchy_mod = np.array([compute_q(xx, k, b_sqrd, c) for xx in x])\n",
+    "for _ in range(42):\n",
+    "    if np.all(k*y_cauchy > y_gamma):\n",
+    "        k = (k+k_low)/2.\n",
+    "    else:\n",
+    "        k_low = k\n",
+    "        k = k_low + k/2.\n",
+    "plt.plot(x, y_gamma, label='gamma')\n",
+    "plt.plot(x, k*y_cauchy, label='k cachy_mod')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k*y_cauchy_mod > y_gamma"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.all( k*y_cauchy_mod > y_gamma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "compute_gamma??"
+   ]
+  },
+  {
    "cell_type": "code",
    "metadata": {},
    "outputs": [],
@@ -243,7 +344,7 @@
   }
  ],
  "metadata": {
-  "hide_input": true,
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python3",
@@ -266,8 +367,28 @@
    "current_citInitial": 1,
    "eqLabelWithNumbers": true,
    "eqNumInitial": 0
+  },
+  "toc": {
+   "colors": {
+    "hover_highlight": "#DAA520",
+    "running_highlight": "#FF0000",
+    "selected_highlight": "#FFD700"
+   },
+   "moveMenuLeft": true,
+   "nav_menu": {
+    "height": "103px",
+    "width": "252px"
+   },
+   "navigate_menu": true,
+   "number_sections": true,
+   "sideBar": true,
+   "threshold": 4,
+   "toc_cell": false,
+   "toc_section_display": "block",
+   "toc_window_display": false,
+   "widenNotebook": false
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
