--- a/boilerplate.ipynb
+++ b/boilerplate.ipynb
@@ -5,6 +5,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from collections import Counter\n",
     "import functools as ft\n",
     "from graphviz import Digraph\n",
     "from ipywidgets import interact, interactive, fixed\n",
@@ -339,7 +340,7 @@
   "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
-   "language": "python",
+   "language": "python3",
    "name": "python3"
   },
   "language_info": {
@@ -362,15 +363,26 @@
   },
   "nav_menu": {},
   "toc": {
+   "colors": {
+    "hover_highlight": "#DAA520",
+    "running_highlight": "#FF0000",
+    "selected_highlight": "#FFD700"
+   },
+   "moveMenuLeft": true,
+   "nav_menu": {
+    "height": "12px",
+    "width": "252px"
+   },
    "navigate_menu": true,
    "number_sections": true,
    "sideBar": false,
-   "threshold": 6,
+   "threshold": 4,
    "toc_cell": false,
    "toc_section_display": "block",
-   "toc_window_display": false
+   "toc_window_display": false,
+   "widenNotebook": false
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
