--- a/ml/sampling-methods/index.ipynb
+++ b/ml/sampling-methods/index.ipynb
@@ -2,31 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "run_control": {
-     "frozen": false,
-     "read_only": false
-    }
-   },
+   "metadata": {},
    "source": [
-    "Sampling Methods\n",
-    "================"
+    "# Sampling Methods"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "run_control": {
-     "frozen": false,
-     "read_only": false
-    }
-   },
+   "metadata": {},
    "source": [
     "1. [Basic Sampling](basic-sampling.ipynb)\n",
     "1. [Box Mueller method](box-muller-method.ipynb)\n",
     "1. [Rejection Sampling](rejection-sampling.ipynb)\n",
     "1. [Adaptive Rejection Sampling](adaptive-rejection-sampling.ipynb)\n",
-    "1. [Importance sampling & MCMC](importance-sampling-mcmc.ipynb)"
+    "1. [Importance sampling & MCMC](importance-sampling-mcmc.ipynb)\n",
+    "1. [Sampling Importance Resampling](sampling-importance-resampling.ipynb)\n",
+    "1. [Metropolis, the mofo](metropolis.ipynb)"
    ]
   }
  ],
@@ -47,8 +38,6 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3"
-   "pygments_lexer": "ipython3",
-   "version": "3.6.1"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
