--- a/ml/sampling-methods/sampling-importance-resampling.ipynb
+++ b/ml/sampling-methods/sampling-importance-resampling.ipynb
@@ -21,6 +21,7 @@
     "from pprint import pprint\n",
     "import random\n",
     "import scipy as sp\n",
+    "import scipy.stats as sp_stats\n",
     "\n",
     "from __future__ import print_function\n",
     "\n",
@@ -47,9 +48,10 @@
     "\\newcommand{\\ds}{\\displaystyle}\n",
     "\\newcommand{\\E}[1]{\\mathbb{E}\\left[ #1 \\right]}\n",
     "\\newcommand{\\expb}[1]{\\exp\\left\\{#1\\right\\}} \n",
-    "\\newcommand{\\expp}[1]{\\exp\\left(#1\\right)} \n",
     "\\newcommand{\\EXP}[1]{\\exp\\left\\{#1\\right\\}} \n",
     "\\newcommand{\\frachalf}[1]{\\frac{#1}{2}~}\n",
+    "\\newcommand{\\fracone}[1]{\\frac{1}{#1}~}\n",
+    "\\newcommand{\\fracrec}[1]{\\frac{1}{#1}~}\n",
     "\\newcommand{\\half}{\\fracone{2}}\n",
     "\\newcommand{\\H}[1]{\\mathbb{H}\\left[#1\\right]}\n",
     "\\newcommand{\\Int}[2]{\\displaystyle \\int_{#1}^{#2}~}\n",
@@ -69,7 +71,6 @@
     "\\newcommand{\\P}{\\mathbb{P}}\n",
     "\\newcommand{\\Paran}[1]{\\left(#1\\right)}\n",
     "\\newcommand{\\Partial}[2]{\\frac{\\partial #1}{\\partial #2}}\n",
-    "\\newcommand{\\recip}[1]{\\frac{1}{#1}~}\n",
     "\\newcommand{\\sqrbrkt}[1]{\\Bracket{#1}^2}\n",
     "\\newcommand{\\sqrbrc}[1]{\\Brace{#1}^2}\n",
     "\\newcommand{\\trace}[1]{\\text{Tr}\\left( #1 \\right)}\n",
@@ -252,7 +253,6 @@
     "\\newcommand{\\betab}{\\pmb{\\beta}}\n",
     "\\newcommand{\\betabp}{\\betab^{\\prime}}\n",
     "\\newcommand{\\chib}{\\boldsymbol{\\chi}}\n",
-    "\\newcommand{\\expo}[1]{\\exp \\Paren{#1}}\n",
     "\\newcommand{\\etab}{\\pmb{\\eta}}\n",
     "\\newcommand{\\etabp}{\\etab^{\\prime}}\n",
     "\\newcommand{\\etat}{\\eta^T}\n",
@@ -328,8 +328,8 @@
    "source": [
     "HTML(\"<style>\"\\\n",
     "    \"div.cell{\"\\\n",
-    "        \"width:50%;\"\\\n",
-    "        \"margin-left:25%;\"\\\n",
+    "        \"width:80%;\"\\\n",
+    "        \"margin-left:10%;\"\\\n",
     "        \"margin-right:auto;\"\\\n",
     "    \"}\"\\\n",
     "\"</style>\")"
@@ -339,60 +339,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "if z is a uniformly distributed RV in [0,1). That is, $z \\sim U(0,1)$.  \n",
+    "* we need to sample from p(z)\n",
     "\n",
-    "We need to tranform z as y=f(z) such that the y follows a probability distribution p(y).  \n",
-    "How to acheive it?  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The distribution of y is governed by   \n",
-    "$\n",
-    "\\ds p(y) = p(z) \\left| \\frac{dz}{dy} \\right|\n",
-    "$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Here p(z) and we need to find y.  \n",
-    "Integrating both sides, we get  \n",
-    "$\n",
-    "\\ds z = h(y) = \\int_{-\\infty}^{y} p(y') dy' \n",
-    "$   \n",
-    "\n",
-    "Hence,  \n",
-    "$\n",
-    "\\ds y = \\inv{h}(z)\n",
-    "$  \n",
-    "\n",
-    "That is, we have to transform the uniformly distributed random numbers using a function which is   \n",
-    "the inverse of the indefinite integral of the desired distribution."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Lets say we need  \n",
-    "$\n",
-    "\\ds p(y) = \\lambda \\expp{-\\lambda y}\n",
-    "$\n",
-    "\n",
-    "$\n",
-    "\\ds h(y) = \\int_{-\\infty}^{y} \\lambda \\expp{-\\lambda y} dy\n",
-    "= \\int_{0}^{y} \\lambda \\expp{-\\lambda y} dy\n",
-    "= 1 - \\expp{-\\lambda y}\n",
-    "$\n",
-    "\n",
-    "hence,\n",
-    "$\n",
-    "\\ds y = -\\recip{\\lambda} \\ln(1-z)\n",
-    "$"
+    "1. sample from q(z)\n",
+    "1. find the importance weights $w_i = p(z_i)/q(z_i)$\n",
+    "1. normalize $w_i$'s\n",
+    "1. resample $\\Brace{z_i}$ with probability given by $w_i$'s"
    ]
   },
   {
@@ -400,47 +352,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.arange(1000).shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.linspace(0,1,11)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "L = 0.5\n",
-    "N = 10**6\n",
-    "z = np.random.rand(1,N)\n",
-    "y = - np.log(1 - z) / L\n",
-    "plt.hist(y.ravel(), bins=1000)\n",
-    "plt.ylabel('p(y)'); plt.xlabel('y')\n",
+    "N, u_half_width = 10**5, 10\n",
+    "# q: uniform distribution\n",
+    "z = u_half_width*(np.random.rand(1, N)*2-1).ravel()\n",
+    "\n",
+    "# importance weights\n",
+    "w = np.array([sp_stats.norm.pdf(zz, scale=3) \n",
+    "              for zz in z])/(1./(2*u_half_width))\n",
+    "w = w / np.sum(w)\n",
+    "\n",
+    "# sample according to weights\n",
+    "z_new = np.random.choice(z, N, replace=True, p=w)\n",
+    "\n",
+    "hist_out = plt.hist(z_new, bins=20)\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -477,8 +403,8 @@
    },
    "moveMenuLeft": true,
    "nav_menu": {
-    "height": "12px",
-    "width": "252px"
+    "height": "11.73913049697876px",
+    "width": "1.7391304969787598px"
    },
    "navigate_menu": true,
    "number_sections": true,
