--- a/math/probability-distributions/poisson.ipynb
+++ b/math/probability-distributions/poisson.ipynb
@@ -33,6 +33,7 @@
    "source": [
     "initialization  \n",
     "$\n",
+    "\\newcommand{\\ds}{\\displaystyle}\n",
     "\\newcommand{\\E}[1]{\\mathbb{E}\\left[ #1 \\right]}\n",
     "\\newcommand{\\V}[1]{\\mathbb{V}\\left[#1\\right]}\n",
     "\\newcommand{\\H}[1]{\\mathbb{H}\\left[#1\\right]}\n",
@@ -253,6 +254,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Assumptions: When is the Poisson distribution an appropriate model?\n",
+    "\n",
+    "\n",
+    "The Poisson distribution is an appropriate model if the following assumptions are true.\n",
+    "\n",
+    "1. K is the number of times an event occurs in an interval and K can take values 0, 1, 2, …\n",
+    "1. The occurrence of one event does not affect the probability that a second event will occur. That is, events occur independently.\n",
+    "1. The rate at which events occur is constant. The rate cannot be higher in some intervals and lower in other intervals.\n",
+    "1. Two events cannot occur at exactly the same instant.\n",
+    "1. The probability of an event in a small interval is proportional to the length of the interval.\n",
+    "\n",
+    "If these conditions are true, then K is a Poisson random variable, and the distribution of K is a Poisson distribution.\n",
+    "\n",
+    "Questions  \n",
+    "* how to establish [2]? how can you prove that events are independent?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Occurrence  \n",
     "\n",
     "* Examples: Number of\n",
@@ -268,11 +290,11 @@
    "source": [
     "# Probability Mass Function\n",
     "\n",
-    "$f(k; \\lambda) = \\frac{\\lambda^k e^{-\\lambda}}{k!}, \\lambda > 0, k \\ge 0$\n",
+    "$\\ds f(k; \\lambda) = \\frac{\\lambda^k e^{-\\lambda}}{k!}, \\lambda > 0, k \\ge 0$\n",
     "\n",
     "** CDF **  \n",
-    "$F(k; \\lambda) = \\frac{\\Gamma(\\lfloor k+1\\rfloor, \\lambda)}{\\lfloor k\\rfloor !},$ or   \n",
-    "$e^{-\\lambda} \\sum_{i=0}^{\\lfloor k\\rfloor} \\frac{\\lambda^i}{i!}\\ $\n",
+    "$\\ds F(k; \\lambda) = \\frac{\\Gamma(\\lfloor k+1\\rfloor, \\lambda)}{\\lfloor k\\rfloor !},$ or   \n",
+    "$\\ds e^{-\\lambda} \\sum_{i=0}^{\\lfloor k\\rfloor}  \\ds \\frac{\\lambda^i}{i!}\\ $\n",
     "\n",
     "Statistics  \n",
     "* Mean: $\\lambda$\n",
@@ -286,7 +308,7 @@
     "# Notes\n",
     "\n",
     "1. $\\lambda^k$ and $k!$ can easily lead to overflow. For numerical stability, the mass function should be evaluated as  \n",
-    "$\\!f(k; \\lambda)= \\exp \\left\\{ {k\\ln \\lambda  - \\lambda  - \\ln \\Gamma (k+1)} \\right\\}$  \n",
+    "$\\ds \\!f(k; \\lambda)= \\exp \\left\\{ {k\\ln \\lambda  - \\lambda  - \\ln \\Gamma (k+1)} \\right\\}$  \n",
     "the natural log of the gamma function is obtained using lgamma (in C) or gammaln (Matlab, SciPy)  "
    ]
   },
@@ -327,7 +349,7 @@
   }
  ],
  "metadata": {
-  "hide_input": true,
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python3",
@@ -350,8 +372,28 @@
    "current_citInitial": 1,
    "eqLabelWithNumbers": true,
    "eqNumInitial": 0
+  },
+  "toc": {
+   "colors": {
+    "hover_highlight": "#DAA520",
+    "running_highlight": "#FF0000",
+    "selected_highlight": "#FFD700"
+   },
+   "moveMenuLeft": true,
+   "nav_menu": {
+    "height": "84px",
+    "width": "252px"
+   },
+   "navigate_menu": true,
+   "number_sections": true,
+   "sideBar": true,
+   "threshold": 4,
+   "toc_cell": false,
+   "toc_section_display": "block",
+   "toc_window_display": false,
+   "widenNotebook": false
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
